--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/en/sign-in"
+NEXT_PUBLIC_CLERK_SIGN_UP_URL="/en/sign-up"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/"
 
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y2FzdWFsLWRvbmtleS01Mi5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_SCrenxgHdwabeyv2vjBf9ticZlspKGgf716RD633qh
+WEBHOOK_SECRET=whsec_JmocVVZpqOlvCtPlAQAlMhJyfUOsH8Tx
 
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+DATABASE_URL="mongodb+srv://pongmettraprasert:123456789a@cluster0.ovoho9v.mongodb.net/merabop?retryWrites=true&w=majority"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mongodb+srv://pongmettraprasert:<password>@cluster0.0yoykx9.mongodb.net/merabop-starter?retryWrites=true&w=majority"
+//pongmettraprasert
+//123456789a
