--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20",
     "@types/react": "^18",
