--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-themes": "^0.2.1",
     "prisma": "^5.7.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
